<resources>
    <string name="app_name">Christmas Fun</string>

    <string name="onesignal_app_id">adqwd23-3w23-df3s-sef3-23fdw323ed34</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="applovin_id">FBZJ_3ffffw2ff3ff3-fdwedf323dd23d23d32d3-d3wd3d33w2fffffwfwew334</string>

    <string name="privacy_policy_url">http://www.example.com/</string>

    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Viaan+Parmar&amp;hl=en</string>

    <string name="wortise_app_id">c2f94dbb-e29a-4a95-bbf9-fbf860c428b4</string>

    <string name="isRTL">false</string>

    <string name="desc">desc</string>
    <string name="img_no">No Favorite Found</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="download">Downloading</string>
    <string name="set_as_ring">Set As Ringtone</string>
    <string name="set_ringnotification">Notification Ringtone</string>
    <string name="set_ringalarm">Alarm Ringtone</string>

    <string name="version">Version</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- main features screen name -->
    <string name="wallpaper">Wallpapers</string>
    <string name="ringtone">Ringtones</string>

    <!-- main menu overflow -->
    <string name="title_activity_quiz">Quiz</string>
    <string name="about">About</string>
    <string name="email">Email</string>
    <string name="loading">Loading..</string>
    <string name="quiz">Quiz</string>
    <string name="net_not_conn">Internet not connected</string>
    <string name="christmas">Christmas</string>
    <string name="message">Message</string>
    <string name="reload">Reload</string>
    <string name="no_message_found">No Messages Found</string>
    <string name="no_wallpaper_found">No Wallpapers Found</string>
    <string name="no_ringtones_found">No Ringtones Found</string>
    <string name="server_no_conn">Error connecting server, please try again</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="moreapp">More Apps</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="shareapp">Share App</string>
    <string name="home">Home</string>
    <string name="nav_header_title">Christmas Fun Special</string>
    <string name="nav_header_message">Wish you Merry Christmas</string>
    <string name="more">More</string>
    <string name="no_data_found">No Data Found</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="message_copied">Message has been copied</string>
    <string name="timer">Timer :</string>
    <string name="no_of_que">No. of Questions :</string>
    <string name="time_per_que">Time per Question (sec) :</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="a5050">5050</string>
    <string name="skip">Skip</string>
    <string name="ok">OK</string>
    <string name="cancel_quiz">Cancel Quiz</string>
    <string name="sure_cancel_quiz">Are you sure you want to cancel quiz?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="skip_not_available">Skip is not available</string>
    <string name="not_available_5050">50–50 not available</string>
    <string name="already_used_5050">Already used 50–50</string>
    <string name="select_answer">Please select answer</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
    <string name="ringtone_set">Ringtone Set</string>
    <string name="sure_quit">Are you sure you want to quit?</string>
    <string name="rate_app">Rate App</string>
    <string name="cannot_use_download_permission">Cannot use download feature without request permission</string>
    <string name="setting_wallpaper">Wallpaper is setting</string>
    <string name="wallpaper_set">Wallpaper set</string>
    <string name="please_wait">Please Wait</string>
    <string name="downloading">Downloading..</string>
    <string name="wallpaper_saved">Wallpaper Saved</string>
    <string name="save">Save</string>
    <string name="set_as">Set As</string>
    <string name="christmas_ringtone">Christmas Ringtone :-</string>
    <string name="connect_to_working_internet">Please connect to working internet</string>
    <string name="alarm_set">Alarm Ringtone Set</string>
    <string name="ringtone_already_saved">Ringtone Already Saved</string>
    <string name="ringtone_saved">Ringtone Saved</string>
    <string name="set_as_noti">Set As Notification tone</string>
    <string name="set_as_alarm">Set As Alarm tone</string>
    <string name="error_downloading_file">Error downloading file</string>
    <string name="noti_set">Notification tone set</string>
    <string name="most_view_wallpaper">Most Viewed Wallpaper</string>
    <string name="download_this_ring">Download this and many other ringtones</string>
    <string name="results">Results</string>
    <string name="total_number_of_question">Total Number of Question</string>
    <string name="number_of_questions_attempted">Number of Questions Attempted</string>
    <string name="number_of_correct_answer">Number of Correct Answer</string>
    <string name="number_of_wrong_answer">Number of Wrong Answer</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="server_error">Server Error</string>
    <string name="internet_not_connected">Please connect to internet</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="get_more_wall">Get more amazing wallpapers, download now</string>
    <string name="get_more_ringtone">Get more amazing ringtone, download now</string>
    <string name="err_set_wallpaper">Error while setting wallpaper</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home_lock_screen">Home Screen and Lock Screen</string>
</resources>
