<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_quiz"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_red_top_round"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/quiz"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_que"
                android:textColor="@color/text_black_dark"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_no_que"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="55dp"
                android:gravity="center"
                android:theme="@style/Spinner"
                app:backgroundTint="@color/primary"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/timer"
                android:textColor="@color/text_black_dark"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/primary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_per_que"
                android:textColor="@color/text_black_dark"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="55dp"
                android:gravity="center"
                android:theme="@style/Spinner"
                app:backgroundTint="@color/primary" />

        </LinearLayout>

        <Button
            android:id="@+id/button_goquiz"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_btn_red"
            android:text="@string/lets_play"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:paddingRight="45dp"
            android:paddingLeft="45dp"/>

    </LinearLayout>

</LinearLayout>