<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_message">

    <LinearLayout
        android:id="@+id/ll_set_ring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/setas_ring"
            android:padding="10dp"
            app:tint="@color/black_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_as_ring"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/text_black_dark"
            android:padding="15dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black40_dark"/>

    <LinearLayout
        android:id="@+id/ll_set_noti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/setas_noti"
            android:padding="10dp"
            app:tint="@color/black_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_as_noti"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/text_black_dark"
            android:padding="15dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black40_dark"/>

    <LinearLayout
        android:id="@+id/ll_set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/setas_alarm"
            android:padding="10dp"
            app:tint="@color/black_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_as_alarm"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/text_black_dark"
            android:padding="15dp" />

    </LinearLayout>

</LinearLayout>