<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_quiz"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:elevation="5dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/quiz" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_btn_red"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView_ques_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_ques_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_5050"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_btn_red"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="5050 - 3"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_skip"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_btn_red"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Skip - 3"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/bg_btn_red"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_question"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="0.8"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton_A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_radio_gradient_grey"
                    android:button="@android:color/transparent"
                    android:drawableLeft="@drawable/selector_radio_thumb"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/selector_radio_thumb"
                    android:padding="15dp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioButton_B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_radio_gradient_grey"
                    android:button="@android:color/transparent"
                    android:drawableLeft="@drawable/selector_radio_thumb"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/selector_radio_thumb"
                    android:padding="15dp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioButton_C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_radio_gradient_grey"
                    android:button="@android:color/transparent"
                    android:drawableLeft="@drawable/selector_radio_thumb"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/selector_radio_thumb"
                    android:padding="15dp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioButton_D"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_radio_gradient_grey"
                    android:button="@android:color/transparent"
                    android:drawableLeft="@drawable/selector_radio_thumb"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/selector_radio_thumb"
                    android:padding="15dp"
                    android:textColor="@color/black" />

            </RadioGroup>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_5050"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_red"
                android:text="@string/a5050"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_skip"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_red"
                android:text="@string/skip"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_okk"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_red"
                android:text="@string/ok"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>